# t3d

./: .gitignore  CMakeLists.txt  Dockerfile  docker-compose.yml  vcpkg.json
.idx/: dev.nix
src/: CMakeLists.txt
src/server/: CMakeLists.txt  main.cc
